Fixed Broken Layout of Article Viewer user legend

--- a/app/assets/stylesheets/modules/_article_viewer.styl
+++ b/app/assets/stylesheets/modules/_article_viewer.styl
@@ -36,6 +36,10 @@
   position: relative
   color: white
 
+.tooltip-indicator-article-viewer
+  background: url('../images/circle_q_mark_icons.svg') center no-repeat
+  padding: 8.5px;
+
 
 .article-alert
   align-items flex-start
@@ -76,13 +80,15 @@
 .user-legend-wrap
   width 90%
   background white
-
-.user-legend
+  
+.user-legend-article-viewer
   margin 10px
   border-radius 15px
-  padding 2px 0px 2px 0px
   display flex
   align-items center
+
+.user-legend-name
+  padding 0px 0px 0px 10px
 
 .user-legend-hover:hover
   background-color rgba(0, 0, 0, 0.2)
